# ZSWatch

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEBUGGING_ISSUES.md  GETTING_STARTED.md  Kconfig  LICENCE  README.md  pinmap.txt  prj.conf  ubx_evkninab4_nrf52833.overlay
app/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  VERSION  linker_arm_extxip.ld  partition.yml  partition_external.yml  partition_internal.yml  partition_zs.yml  pm_static.yml  pm_static_nrf5340dk_nrf5340_cpuapp.yml  pm_static_watchdk_nrf5340_cpuapp_1.yml  pm_static_zswatch_legacy_nrf5340_cpuapp_4.yml  pm_static_zswatch_legacy_nrf5340_cpuapp_5.yml  pm_static_zswatch_nrf5340_cpuapp_4.yml  prj.conf  qspi_at25sl128a.ini  sysbuild.cmake  sysbuild.conf  sysbuild_no_mcuboot_no_xip.conf  sysbuild_zswatch_nrf5340_cpuapp_5.conf  west.yml
app/boards/: ble_df_aoa.conf  bsec.conf  clockwise_rotation.overlay  da7212.conf  debug.conf  dfu.conf  log_on_rtt.conf  log_on_uart.conf  log_on_uart.overlay  log_on_usb.conf  log_on_usb.overlay  native_posix.conf  native_posix.overlay  native_posix_64.conf  native_sim_64.conf  native_sim_64.overlay  no_rtc.conf  no_touch.conf  no_touch.overlay  npm1300_ek.conf  npm1300_ek.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  release.conf  test_mode.conf  watch_da7212.overlay  watchdk_da7212.overlay  watchdk_nrf5340_cpuapp.conf  watchdk_nrf5340_cpuapp.overlay  watchdk_nrf5340_cpuapp_1.conf  zswatch_legacy_nrf5340_cpuapp_4.conf  zswatch_legacy_nrf5340_cpuapp_5.conf  zswatch_nrf5340_cpuapp_3.conf  zswatch_nrf5340_cpuapp_4.conf  zswatch_nrf5340_cpuapp_5.conf
app/child_image/: GENERATED_CP_NETWORK_merged_domains.hex  hci_ipc.conf  hci_rpmsg.conf  mcuboot.conf
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.dmic_emul  dmic_emul.c
app/drivers/display/: CMakeLists.txt  Kconfig  Kconfig.gc9a01  gc9a01.c
app/drivers/input/: CMakeLists.txt  Kconfig  input_cst816s.c  input_npm13xx.c
app/drivers/kscan/: CMakeLists.txt  Kconfig  kscan_cst816s.c
app/drivers/rtc/: CMakeLists.txt  Kconfig
app/drivers/sensor/: CMakeLists.txt  Kconfig
app/dts/bindings/: vendor-prefixes.txt
app/lvgl_editor/: .gitignore  CMakeLists.txt  README.md  file_list_gen.cmake  globals.xml  lvgl_compat.h  lvgl_editor.c  lvgl_editor.h  lvgl_editor_gen.c  lvgl_editor_gen.h  project.xml
app/lvgl_editor/fonts/: montserrat_10_data.c  montserrat_12_data.c  montserrat_14_data.c  montserrat_14_full_data.c
app/lvgl_editor/images/: icon_pause_data.c  icon_play_data.c  icon_skip_back_data.c  icon_skip_forward_data.c
app/lvgl_editor/preview-bin/: .hash  lved-runtime.js
app/overlays/: mcuboot.overlay
app/patches/: lvgl_scroll_click.patch  npm1300_charger.patch  ram_retention_size_fix.patch  rv8263_rtc.patch  sdl_display_zoom.patch  sdl_display_zoom_touch_fix.patch  sdl_renderer.patch  sdl_upscale.patch
app/patches/2048_lib/: lvgl_v9_compat.patch
app/patches/ext_drivers/: bmp5.patch
app/patches/zephyr/: 0001-Check-event-code-before-handling-it-in-lvgl_pointer_.patch  0001-Merge-CST816S-upstream-driver-with-ZSWatch-driver-an.patch  0001-Remove-upstream-CST816S-driver.patch  0001-Remove-upstream-touch.patch  0001-drivers-rtc-Add-support-for-Micro-Crystal-RV-8263-C8.patch  0001-drivers-rtc-Change-error-to-ENODATA-in-get-time-func.patch  0001-drivers-rtc-OS-flag-is-never-cleared.patch  0001-drivers-rtc-Wrong-alarm-mask-in-rtc_alarm_get_time.patch  0001-drivers-rtc-off-by-one-error-in-RV-8263-C8-driver.patch  0001-modules-lvgl-Prevent-false-pointer-input-events.patch  0004-Remove-reset-from-apds9306-driver.patch  0005-drivers-sensor-APDS9306-Add-lux-conversion.patch  92664-lfxo-as-gpio.patch  add_rtc_rv8263.patch  da7212_fix_clock_cells.patch  drivers-sensor-Add-attribute-for-gain-and-resolution.patch  fix_using_invalid_touch_events_lvgl_pointer_input.patch  (+7 more)
app/pytest/: README.md  README_POWER.md  conftest.py  devices.yaml  mcumgr_utils.py  native_sim_runner.py  power_logger.py  ppk2_helper.py  pytest.ini  requirements.txt  test_basic.py  test_ble.py  test_current_consumption.py  test_hw_app.py  test_linux.py  test_native_app.py  test_power_consumption.py  test_usb_fw_update.py  utils.py
app/scripts/: astyle_format_west_command.py  coredump_west_command.py  create_custom_resource_image.py  create_littlefs_resouce_image.py  create_lvgl_image.py  create_resource_fs.py  lvgl_c_array_to_bin.py  lvgl_c_array_to_bin_lvgl9.py  lvgl_v8_to_v9_image_converter.py  mic_analyze.py  requirements.txt  rtt_flash_loader.py  sensor_fusion_analyze.py  upload_fs_west_command.py  west-commands.yml  zswatch_ble_control.py  zswatch_remote_ui.py  zswatch_send_command.py
app/src/: accelerometer.c  accelerometer.h  battery.c  ble_aoa.c  ble_comm.c  ble_comm.h  ble_transport.c  ble_transport.h  buttons.c  buttons.h  clock.c  dfu.c  dfu.h  display_control.c  display_control.h  filesystem.c  filesystem.h  gpio_debug.c  gpio_debug.h  heart_rate_sensor.c  magnetometer.c  magnetometer.h  main.c  notification_manager.c  notification_manager.h  pressure_sensor.c  pressure_sensor.h  ram_retention_storage.c  ram_retention_storage.h  vibration_motor.c  vibration_motor.h  watchface_app.c  watchface_app.h  zsw_accelerometer.c  zsw_accelerometer.h  zsw_alarm.c  zsw_alarm.h  zsw_battery_manager.c  zsw_battery_manager.h  zsw_charger.c  (+40 more)
app/sysbuild/: CMakeLists.txt
app/tools/: astyle.cfg  format_code.ps1  format_code.sh
app/zephyr/: module.yml
app/zephyr_patches/: sdl_upscale.patch
power_debug/: CMakeLists.txt  Kconfig  README.md  prj.conf
power_debug/boards/: watchdk_nrf5340_cpuapp.conf  watchdk_nrf5340_cpuapp.overlay  watchdk_nrf5340_cpuapp_debug.conf  watchdk_nrf5340_cpuapp_debug.overlay
power_debug/src/: main.c
production_test/: CMakeLists.txt  Kconfig  prj.conf
production_test/boards/: native_sim_64.conf  native_sim_64.overlay  watchdk_nrf5340_cpuapp.conf  watchdk_nrf5340_cpuapp.overlay  zswatch_nrf5340_cpuapp.conf  zswatch_nrf5340_cpuapp.overlay
production_test/src/: main.c  production_test_runner.c  production_test_runner.h
(+1678 files in other folders)
